--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,56 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+<!-- datalayer below -->
+<script>
+  window.dataLayer = window.dataLayer || [];
+  window.dataLayer.push({
+      event: 'pageview',
+      page: {
+          url: window.location.href,
+          title: document.title,
+          category: 'product'
+      },
+      user: {
+          userId: '',
+          ecoConscious: false
+      },
+      product: {
+          productId: '12345',
+          name: 'Eco-Friendly T-shirt',
+          category: 'Eco-Friendly Apparel',
+          price: 29.99,
+          brand: 'EcoBrand',
+          ecoTag: true,
+          quantity: 1
+      },
+      cart: {
+          totalValue: 89.97,
+          itemsInCart: 3
+      },
+      transaction: {
+          transactionId: 'TXN001',
+          totalValue: 89.97,
+          items: [
+              { productId: '12345', price: 29.99, quantity: 1 },
+              { productId: '54321', price: 59.99, quantity: 2 }
+          ]
+      },
+      sustainabilityMetrics: {
+          ecoScore: 85,
+          waterSaved: 30,
+          carbonOffset: 12.5
+      },
+      userBehavior: {
+          pageViews: 5,
+          addToCart: true,
+          checkoutStarted: false,
+          purchaseCompleted: false
+      }
+  });
+</script>
+
 <script src="https://assets.adobedtm.com/43e08a8c9425/3f649a539553/launch-3e8c266d5631-development.min.js" async></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
