--- a/public/index.html
+++ b/public/index.html
@@ -21,51 +21,84 @@
 
 <!-- datalayer below -->
 <script>
-  window.dataLayer = window.dataLayer || [];
-  window.dataLayer.push({
-      event: 'pageview',
-      page: {
-          url: window.location.href,
-          title: document.title,
-          category: 'product'
+ window.digitalData = {
+  "page": {
+    "pageInfo": {
+      "breadcrumbs": "eco-store:us:en:home",
+      "pageShortName": "eco-store:home",
+      "pageName": "content:eco-store:us:en:home",
+      "destinationURL": window.location.href,
+      "isIframe": false,
+      "contentIframe": false,
+      "hierarchie1": "eco-store:us:en:home",
+      "title": document.title,
+      "internalPageName": "home",
+      "pageID": "eco-store:content:home",
+      "tagging": "",
+      "server": window.location.hostname,
+      "urlShortcut": "",
+      "referringURL": document.referrer,
+      "sysEnv": navigator.userAgent
+    },
+    "category": {
+      "type": "eco-friendly:clothing",
+      "version": "1.0"
+    },
+    "attributes": {
+      "ecoTag": true
+    },
+    "components": []
+  },
+  "product": [
+    {
+      "productInfo": {
+        "productId": "12345",
+        "productName": "Eco-Friendly T-shirt",
+        "category": "Eco-Friendly Apparel",
+        "price": 29.99,
+        "brand": "EcoBrand",
+        "quantity": 1,
+        "sku": "ECO12345",
+        "ecoTag": true
       },
-      user: {
-          userId: '',
-          ecoConscious: false
-      },
-      product: {
-          productId: '12345',
-          name: 'Eco-Friendly T-shirt',
-          category: 'Eco-Friendly Apparel',
-          price: 29.99,
-          brand: 'EcoBrand',
-          ecoTag: true,
-          quantity: 1
-      },
-      cart: {
-          totalValue: 89.97,
-          itemsInCart: 3
-      },
-      transaction: {
-          transactionId: 'TXN001',
-          totalValue: 89.97,
-          items: [
-              { productId: '12345', price: 29.99, quantity: 1 },
-              { productId: '54321', price: 59.99, quantity: 2 }
-          ]
-      },
-      sustainabilityMetrics: {
-          ecoScore: 85,
-          waterSaved: 30,
-          carbonOffset: 12.5
-      },
-      userBehavior: {
-          pageViews: 5,
-          addToCart: true,
-          checkoutStarted: false,
-          purchaseCompleted: false
+      "metrics": {
+        "ecoScore": 85,
+        "waterSaved": 30,
+        "carbonOffset": 12.5
       }
-  });
+    }
+  ],
+  "cart": {
+    "productsInCart": 1,
+    "cartValue": 29.99,
+    "cartItems": [
+      {
+        "productId": "12345",
+        "productName": "Eco-Friendly T-shirt",
+        "price": 29.99,
+        "quantity": 1
+      }
+    ]
+  },
+  "user": [
+    {
+      "profile": [
+        {
+          "profileInfo": {
+            "userId": "guest",
+            "userType": "anonymous"
+          },
+          "attributes": {
+            "loggedIn": false,
+            "ecoConscious": false
+          }
+        }
+      ]
+    }
+  ],
+  "pageInstanceID": "eco-store:publish:content:home",
+  "language": "en"
+};
 </script>
 
 <script src="https://assets.adobedtm.com/43e08a8c9425/3f649a539553/launch-3e8c266d5631-development.min.js" async></script>
