removed the meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.salesforce-sites.com https://*.salesforce.com; connect-src 'self' https://*.salesforce-sites.com https://*.salesforce.com;">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.salesforce-sites.com https://*.salesforce.com; connect-src 'self' https://*.salesforce-sites.com https://*.salesforce.com;"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
