added synchrounous script.

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
   };
 </script>
 
-<script type="text/javascript" async src="//cdn.evgnet.com/beacon/partneracceleration/fabrikhunter/scripts/evergage.min.js"></script>
+<script type="text/javascript" src="//cdn.evgnet.com/beacon/partneracceleration/fabrikhunter/scripts/evergage.min.js"></script>
     <script src="https://assets.adobedtm.com/43e08a8c9425/3f649a539553/launch-3e8c266d5631-development.min.js" async></script>
 
     <title>FabrikHunter</title>
