--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   </head>
 
   <body>
-    <script>
+    <!-- <script>
       function getRandomTime(min, max) {
         return Math.floor(Math.random() * (max - min + 1)) + min;
       }
@@ -71,7 +71,7 @@
       setTimeout(function() {
         let popup = window.open('https://mc953zsyjzkqnx9q59-z6dk4tfn4.pub.sfmc-content.com/yk305t4m1zq', '_blank', 'width=500,height=600');
       }, getRandomTime(5000, 15000)); // Random time between 5s and 15s
-    </script>
+    </script> -->
 
     <div id="root"></div>
 
