--- a/public/index.html
+++ b/public/index.html
@@ -57,21 +57,91 @@
 
 
 <script type="text/javascript" src="//cdn.evgnet.com/beacon/partneracceleration/fabrikhunter/scripts/evergage.min.js"></script>
+
 <script src="https://assets.adobedtm.com/43e08a8c9425/3f649a539553/launch-61ac6adcbbc5.min.js" async></script>
 
     <title>FabrikHunter</title>
   </head>
 
   <body>
-    <!-- <script>
+    <script>
       function getRandomTime(min, max) {
-        return Math.floor(Math.random() * (max - min + 1)) + min;
-      }
-    
-      setTimeout(function() {
-        let popup = window.open('https://mc953zsyjzkqnx9q59-z6dk4tfn4.pub.sfmc-content.com/yk305t4m1zq', '_blank', 'width=500,height=600');
-      }, getRandomTime(5000, 15000)); // Random time between 5s and 15s
-    </script> -->
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+}
+
+function createModal() {
+  // Create modal container
+  const modal = document.createElement('div');
+  modal.style.cssText = `
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+  `;
+
+  // Create modal content
+  const modalContent = document.createElement('div');
+  modalContent.style.cssText = `
+    background-color: white;
+    padding: 20px;
+    border-radius: 5px;
+    width: 500px;
+    max-width: 80%;
+    max-height: 80%;
+    overflow: auto;
+    position: relative;
+  `;
+
+  // Create close button
+  const closeButton = document.createElement('button');
+  closeButton.textContent = 'X';
+  closeButton.style.cssText = `
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    font-size: 20px;
+    cursor: pointer;
+  `;
+  closeButton.onclick = function() {
+    document.body.removeChild(modal);
+  };
+
+  // Create iframe for content (similar to what your popup would show)
+  const iframe = document.createElement('iframe');
+  iframe.src = 'https://mc953zsyjzkqnx9q59-z6dk4tfn4.pub.sfmc-content.com/yk305t4m1zq';
+  iframe.style.cssText = `
+    width: 100%;
+    height: 500px;
+    border: none;
+  `;
+
+  // Assemble the modal
+  modalContent.appendChild(closeButton);
+  modalContent.appendChild(iframe);
+  modal.appendChild(modalContent);
+  
+  // Add click event to close modal when clicking outside
+  modal.addEventListener('click', function(event) {
+    if (event.target === modal) {
+      document.body.removeChild(modal);
+    }
+  });
+
+  // Add to document
+  document.body.appendChild(modal);
+}
+
+// Set timeout to show modal after random time
+setTimeout(createModal, getRandomTime(5000, 15000)); // Random time between 5s and 15s
+    </script>
 
     <div id="root"></div>
 
