--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,51 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<script type="text/javascript">
+window.eventDataLayer = window.eventDataLayer || {};
+
+window.eventDataLayer.page = {
+    'deviceType': '',
+    'domainName': '',
+    'loginStatus': '',
+    'pageName': '',
+    'pageSubSection1': '',
+    'pageSubSection2': '',
+    'pageCategory': '',
+    'siteBusinessUnit': '',
+    'siteCountry': '',
+    'siteLanguage': '',
+    'websiteName': '',
+    'websiteNameCode': ''
+};
+
+window.eventDataLayer.form = {
+    'formName': '',
+    'fieldName': ''
+};
+
+window.eventDataLayer.application = {
+    'applicationName': '',
+    'applicationStep': ''
+};
+
+window.eventDataLayer.cta = {
+    'linkText': '',
+    'linkIntent': '',
+    'linkScope': ''
+};
+
+window.eventDataLayer.user = {
+    'memberIdentifier': ''
+};
+
+window.eventDataLayer.error = {
+    'errorMessage': ''
+};
+</script>
 
 <!-- datalayer below -->
-<!-- <script type="text/javascript">
+<script type="text/javascript">
   window.digitalData = {
     event: "pageView",
     page: {
@@ -52,7 +94,7 @@
       emailRecommendation: ""
     }
   };
-</script> -->
+</script>
 
 
 
