--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@ window.eventDataLayer.error = {
 
 
 
-<script type="text/javascript" src="//cdn.evgnet.com/beacon/partneracceleration/fabrikhunter/scripts/evergage.min.js"></script>
+<!-- <script type="text/javascript" src="//cdn.evgnet.com/beacon/partneracceleration/fabrikhunter/scripts/evergage.min.js"></script> -->
 
 <!--event DataLayer  -->
 <script src="https://assets.adobedtm.com/43e08a8c9425/68544163262c/launch-6c173f8cbb4b-development.min.js" async></script>
