--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@ window.eventDataLayer.error = {
 <!-- <script src="https://assets.adobedtm.com/43e08a8c9425/3f649a539553/launch-61ac6adcbbc5.min.js" async></script> -->
 
 <!--event DataLayer  -->
-<!-- <script src="https://assets.adobedtm.com/43e08a8c9425/68544163262c/launch-6c173f8cbb4b-development.min.js" async></script> -->
+<script src="https://assets.adobedtm.com/43e08a8c9425/68544163262c/launch-6c173f8cbb4b-development.min.js" async></script>
 
     <title>FabrikHunter</title>
   </head>
