added more keys to form

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,9 @@ window.eventDataLayer.page = {
 
 window.eventDataLayer.form = {
     'formName': '',
-    'fieldName': ''
+    'fieldName': '',
+    'formStatus': '',
+    'formIsSubmitted': false,
 };
 
 window.eventDataLayer.application = {
