modified dataLayer to push form events into a stand alone array

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     
 <script type="text/javascript">
 
-window.eventDataLayer = window.eventDataLayer || {};
+window.eventDataLayer = window.eventDataLayer || [];
 
 window.eventDataLayer.page = {
     'deviceType': '',
